hphp/hack/test/typecheck/readonly/vec.php.exp
File "vec.php", line 17, characters 3-4:
This value is readonly, its properties cannot be modified (Typing[4409])
File "vec.php", line 19, characters 3-4:
This value is readonly, its properties cannot be modified (Typing[4409])
